Implement fixed-time tickrate in physics